--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,7 +1,6 @@
 name: Deploy Frontend
 on:
-# push:
-  pull_request:
+  push:
     branches:
       - main # check your repo, your default branch might be master!
 jobs:
@@ -13,19 +12,19 @@ jobs:
       - run: docker build -t cygnetops/react-test -f Dockerfile.dev .
       - run: docker run -e CI=true cygnetops/react-test npm test
 
-      # - name: Generate deployment package
-      #   run: zip -r deploy.zip . -x '*.git*'
+      - name: Generate deployment package
+        run: zip -r deploy.zip . -x '*.git*'
 
-      # - name: Deploy to Elastic Beanstalk
-      #   uses: einaregilsson/beanstalk-deploy@v21
-      #   with:
-      #     aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      #     aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      - name: Deploy to Elastic Beanstalk
+        uses: einaregilsson/beanstalk-deploy@v21
+        with:
+          aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
 # Change application_name, environment_name, existing_bucket_name, and region to the values used by your AWS Elastic Beanstalk environment.
-          # application_name: docker-gh
-          # environment_name: Dockergh-env
-          # existing_bucket_name: elasticbeanstalk-us-east-1-923445559289
-          # region: us-east-2
-          # version_label: ${{ github.sha }}
-          # deployment_package: deploy.zip
+          application_name: frontend
+          environment_name: Frontend-env
+          existing_bucket_name: elasticbeanstalk-us-east-2-901907391748
+          region: us-east-2
+          version_label: ${{ github.sha }}
+          deployment_package: deploy.zip
