--- a/archive (pre-lxr-94)/docker-compose-dev.yml
+++ b/archive (pre-lxr-94)/docker-compose-dev.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: '3'
 services:
   web:
     build:
@@ -10,7 +10,6 @@ services:
       - /app/node_modules
       - .:/app
   tests:
-    stdin_open: true
     build:
       context: .
       dockerfile: Dockerfile.dev
